# docling_demo

./: AGENTS.md  Dockerfile  README.md  conversation_log.md  entrypoint.sh  pyproject.toml
chatsessions/: chat.json
src/: docling_vlm_extract_doctags.ipynb  docling_vlm_extract_doctags.py  docling_vlm_extract_doctags_fullrun.ipynb  docling_vlm_extract_table.ipynb  imageextraction.py  pdfdocling_chunking.py  pdfdocling_vlm_extraction.py  table_utils.py  vlmextract.py
tests/: test_main.py  test_table_utils.py
tools/: inspect_docling.py
